--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 buildscript {
     ext {
-        compose_version = '1.1.1'
+        compose_version = '1.3.2'
+        hilt_version = '2.44.2'
+        timber_version = "5.0.1"
+        rxjava3_version = "3.1.5"
+        rxjava3_android_version = '3.0.2'
+        adapter_rxjava3_version = "2.9.0"
+        retrofit_version = "2.9.0"
+        okhttp_bom_version = "5.0.0-alpha.10"
+        moshi_version = "1.14.0"
+    }
+    dependencies {
+        classpath("com.google.dagger:hilt-android-gradle-plugin:$hilt_version")
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
